resources/assets/css/map.css
/* ... */
#killzonesidebar.sidebar {
    user-select: none;
}

.sidebar .sidebar-content .card-body {
    padding: 0.75rem 1.25rem;
}

#pulls_sidebar,
#pulls_sidebar .bg-header {
    padding-right: 0 !important;
    user-select: none;
}

#pulls_sidebar.active {
    right: 0;
}

@media (max-width: 1440px) {
    #pulls_sidebar,
    #pulls_sidebar .bg-header {
        width: 350px;
        padding-right: 0 !important;

        -webkit-transition: right 0.2s;
        -o-transition: right 0.2s;
        transition: right 0.2s;
    }

    #pulls_sidebar:not(.active) {
        right: -350px;
    }
}

@media (min-width: 1440px) {
    #pulls_sidebar,
    #pulls_sidebar .bg-header {
        width: 400px;
        padding-right: 0 !important;
    }

    #pulls_sidebar:not(.active) {
        right: -400px;
    }
}

@media (min-width: 1920px) {
    #pulls_sidebar,
    #pulls_sidebar .bg-header {
        width: 450px;
        padding-right: 0 !important;
    }

    #pulls_sidebar:not(.active) {
        right: -450px;
    }
}

#pulls_sidebar:not(.mobile) .pulls_container {
    /** Bit of a hack, but the 158 is the height of the header now which somehow isn't taken into account */
    max-height: calc(100vh - 158px);
}

#pulls_sidebar:not(.mobile) .edit .pulls_container {
    /** 55 px is the height of the buttons at the top in the edit scenario */
    max-height: calc(100vh - (158px + 55px));
}

/** Mobile heights */
#pulls_sidebar .handle {
    background-color: #2E2E2E;
    left: -40px;
    padding: 10px 15px;
    position: absolute;
    top: 0;
    width: 40px;
    height: 40px;
    cursor: pointer;
}

#pulls_sidebar .pulls_container {
    max-height: calc(100vh - 109px);
}

#pulls_sidebar .edit .pulls_container {
    /** 55 px is the height of the buttons at the top in the edit scenario */
    max-height: calc(100vh - (109px + 55px));
}

#pulls_sidebar .map_killzonessidebar_killzone_fill_space {
    flex: 1 1 auto
}

#pulls_sidebar [data-toggle="collapse"] .fa:before {
    content: "\f077";
}

#pulls_sidebar [data-toggle="collapse"].collapsed .fa:before {
    content: "\f078";
}

#pulls_sidebar .map_killzonessidebar_floor_switch h6 {
    font-size: 1.1em;
}

#pulls_sidebar .map_killzonessidebar_floor_switch,
#pulls_sidebar .map_killzonessidebar_killzone.selectable {
    cursor: pointer;
}

#pulls_sidebar .map_killzonessidebar_color_btn {
    cursor: pointer;
}

#pulls_sidebar .pickr {
    flex: 1 1 auto;
}

.pull_settings_tools .pickr {
    height: 100%;
}

/** Should render above modals */
.pcr-app {
    z-index: 100100;
}

#pulls_sidebar .map_killzonessidebar_killzone .selected .text-success {
    color: unset !important;
}

.grapick_color_picker_button_outer {
    left: -6px;
    top: -9px;
}

.grapick_color_picker_button {
    width: 12px !important;
    height: 12px !important;
    padding: 0 !important;
}

#edit_route_echo_members_container .list-group-item,
#edit_route_echo_status_container .list-group-item {
    background-color: inherit;
    width: 36px;
    height: 36px;
}


.theme #edit_route_echo_members_container .list-group-item .nav-link,
.theme #edit_route_echo_members_container .list-group-item .nav-link img {
    padding: 0 !important;
    width: 30px;
    height: 30px;
    font-size: 1.15rem;
}

.theme .echo_user {
    border-radius: 30px !important;
}

.map_ad_background {
    background-color: rgba(78, 93, 108, 0.75);
}

.popover #map_dungeon_route_info_popover_container {
    font-size: 1rem;
}

.route_manipulation_tools {
    position: fixed;
    z-index: 99999;
    top: 70px;
    align-items: flex-start !important;
}

.route_manipulation_tools.right {
    right: 0;
}

.route_manipulation_tools .bg-header {
    padding-right: 0.5rem !important;
    padding-bottom: 0.5rem !important;
    margin-left: 0 !important;
}

@media (min-width: 1200px) {
    .route_manipulation_tools.top {
        padding-top: 1rem !important;
    }

    #pulls_sidebar_trigger {
        margin-top: 1rem !important;
    }

    .route_manipulation_tools:not(.top) {
        top: unset;
        align-items: center !important;
    }

    .route_manipulation_tools .bg-header {
        padding: 0.5rem !important;
    }

    .route_manipulation_tools.left .bg-header {
        margin-left: 0.5rem !important;
    }

    .route_manipulation_tools.right .bg-header {
        margin-right: 0.5rem !important;
    }

    #enemy_info_container {
        margin: 0.5rem !important;
    }
}

#enemy_info_container {
    width: 300px;
    margin: 0 !important;
    z-index: 100000;
}

#enemy_info_container .card {
    border-radius: 0 !important;
}

#echo_connected_container {
    font-size: 1.3em;
    cursor: pointer;
}


.echo_connected {
    color: green;
}

.echo_disconnected {
    color: red;
}

.echo_member_header_column_container {
    -ms-flex: 0 0 50px;
    flex: 0 0 50px;
}

.echo_member_column_container {
    height: 32px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.echo_member_column {
    -ms-flex: 0 0 100px;
    flex: 0 0 100px;
}

.route_manipulation_tools .draw_icon {
    text-align: center;
    cursor: pointer;
    -webkit-transition: all 0.2s;
    -o-transition: all 0.2s;
    transition: all 0.2s;
}

.route_manipulation_tools .draw_element {
    text-align: center;
    margin-top: 8px;
}

.route_manipulation_tools .draw_element .bootstrap-select {
    height: 100%;
}

.route_manipulation_tools .draw_icon.leaflet-disabled .col,
.route_manipulation_tools .draw_icon.leaflet-disabled .col:hover {
    background: gray;
    color: inherit;
    text-decoration: unset;
    cursor: default;
}

.floating_panel,
.sidebar .card {
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
}

/** Fix a boatload of 404s being thrown because of missing images/spritesheet.svg */
.leaflet-draw-toolbar a {
    background-image: none !important;
}
/* ... */

